2003-01-29  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* WebClient.cs : hacked OpenRead, DownloadData and DownloadFile.

2002-10-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: applied patch from Tim Haynes
	(thaynes@openlinksw.com).

	Avoided double-sending of the request to the server when both
	GetRequestStream() and GetResponse() are called.
	System Header attributes survive the Headers attribute set.
	Added handling of Connection: KeepAlive/Close

2002-10-03  Dick Porter  <dick@ximian.com>

	* Dns.cs: Fixed GetHostName()

2002-09-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs:
	* HttpWebResponse.cs: applied another patch from Shahms E. King
	(shahms@shahms.com).

2002-09-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs:
	* HttpWebResponse.cs: applied patch from Shahms E. King
	(shahms@shahms.com).

2002-05-29  Lawrence Pit <loz@cable.a2000.nl>

	* MonoHttpDate.cs: added
	* HttpWebRequest.cs: using MonoHttpDate
	* HttpWebResponse.cs: using MonoHttpDate
	* DnsPermission.cs: correct XML output
	* SocketPermission.cs: correct XML output

2002-05-21  Lawrence Pit <loz@cable.a2000.nl>

	* WebClient.cs: stubbed
	* WebProxy.cs: fixed bug; had to change internal representation
	of bypasslist to ArrayList, different implementation of checking
	regex's.

2002-05-20  Lawrence Pit <loz@cable.a2000.nl>

	* WebProxy.cs: added, implemented
	* ServicePoint.cs: implemented most
	* ServicePointManager.cs: implemented
	* HttpWebRequest.cs: started implementation
	* HttpWebResponse.cs: improved disposable routines
	* FileWebRequest.cs: slight improvement of Close method
	
2002-05-19  Lawrence Pit <loz@cable.a2000.nl>

	* FileWebRequest.cs: finished implementation of async methods.
	* FileWebResponse.cs: improved disposable routines.
	* IPEndPoint.cs: fixed bug #24666 in Serialize and Create methods, 
	byte ordering of address was backwards.

2002-05-13  Lawrence Pit <loz@cable.a2000.nl>
